--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "core-js": "^3.19.3",
     "firebase": "^9.6.3",
+    "firebase-admin": "^10.0.1",
     "nuxt": "^2.15.8",
     "nuxt-buefy": "^0.4.13",
     "vue": "^2.6.14",
